Revert "[playground] fix: fix sidebar on mobile"
This reverts commit a40b5e33b07b502a3e51494104e39019bdfa0aa6.

--- a/packages/playground/src/components/SideBar/SideBar.module.scss
+++ b/packages/playground/src/components/SideBar/SideBar.module.scss
@@ -11,7 +11,6 @@
 
 .code {
   width: 419px;
-  max-width: 100%;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -21,7 +20,6 @@
 
 .report {
   width: 420px;
-  max-width: 100%;
   margin: -15px 0px 10px;
   display: block;
   text-align: center;
